SERVER-49676: Coverity analysis defect 115809: Uninitialized scalar field

(cherry picked from commit c7a2fabced047bb9d2a368a471dbec8cd1853da3)